[package]
name = "cql-admin"
version = "0.1.0"
authors = ["Andrew Sisley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
