[package]
name = "cql_db"
description = "Core CQL Database functionality - a lightweight array-based database"
keywords = ["cql", "database", "array", "storage", "nosql"]
categories = ["database", "database-implementations", "filesystem", "caching"]
version = "0.1.0"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_db"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_db"
path = "src/cql_db.rs"

[dependencies]
cql_model = { path = "../cql_model" }
cql_u64 = { path = "../cql_storage_types/cql_u64" }
