[package]
name = "cql_f64"
description = "f64 storage support for CQL Database - a lightweight array-based database"
version = "0.1.0"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_storage_types/cql_f64"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_f64"
path = "src/f64.rs"

[dependencies]
cql_model = { path = "../../cql_model" }
byteorder = "1"
