[package]
name = "cql_nullable_f64"
description = "Nullable f64 storage support for CQL Database - a lightweight array-based database"
keywords = ["cql", "database", "array", "storage", "nosql"]
categories = ["database", "database-implementations", "filesystem", "caching"]
version = "0.2.1"
repository = "https://github.com/AndrewSisley/CQLDb/"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_nullable_f64"
path = "src/nullable_f64.rs"

[dev-dependencies]
cql_db = "^0.2"
serial_test = "0.3.2"

[dependencies]
cql_model = "^0.2"
byteorder = "1"
