[package]
name = "cql_tiny_text"
description = "TinyText storage support for CQL Database - a lightweight array-based database"
version = "0.1.0"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_storage_types/cql_tiny_text"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_tiny_text"
path = "src/tiny_text.rs"

[dev-dependencies]
cql_db = { path = "../../cql_db" }
serial_test = "*"

[dependencies]
cql_model = { path = "../../cql_model" }
byteorder = "1"
