[package]
name = "cql_tiny_text"
description = "TinyText storage support for CQL Database - a lightweight array-based database"
readme = "./README.md"
keywords = ["cql", "database", "array", "storage", "nosql"]
categories = ["database", "database-implementations", "filesystem", "caching"]
version = "0.2.1"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_storage_types/cql_tiny_text"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_tiny_text"
path = "src/tiny_text.rs"

[dev-dependencies]
cql_db = "^0.2.4"
serial_test = "0.3.2"
cql_storage_type_testing_lib = "^0.3.0"

[dependencies]
cql_model = "^0.2"
byteorder = "1"
