[package]
name = "cql_u64"
description = "u64 storage support for CQL Database - a lightweight array-based database"
version = "0.1.0"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_u64"
path = "src/u64.rs"

[dev-dependencies]
cql_db = { path = "../../cql_db" }
serial_test = "*"

[dependencies]
cql_model = { path = "../../cql_model" }
byteorder = "1"
