[package]
name = "cql_u64"
description = "u64 storage support for CQL Database - a lightweight array-based database"
keywords = ["cql", "database", "array", "storage", "nosql"]
categories = ["database", "database-implementations", "filesystem", "caching"]
version = "0.1.0"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_storage_types/cql_u64"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_u64"
path = "src/u64.rs"

[dev-dependencies]
cql_db = { path = "../../cql_db" }
serial_test = "*"

[dependencies]
cql_model = { path = "../../cql_model" }
byteorder = "1"
