[package]
name = "cql_u64"
description = "u64 storage support for CQL Database - a lightweight array-based database"
readme = "./README.md"
keywords = ["cql", "database", "array", "storage", "nosql"]
categories = ["database", "database-implementations", "filesystem", "caching"]
version = "0.2.2"
repository = "https://github.com/AndrewSisley/CQLDb/tree/master/cql_storage_types/cql_u64"
authors = ["Andrew Sisley"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "cql_u64"
path = "src/u64.rs"

[dev-dependencies]
cql_db = "^0.2.4"
serial_test = "0.3.2"

[dependencies]
cql_model = "^0.2"
byteorder = "1"
